# guaraqe.github.io

./: .gitignore  CNAME  Makefile  cabal.project  default.nix  shell.nix  www.cabal  www.hs
builder/: LICENSE  builder.cabal
builder/app/: Book.hs  Main.hs
builder/app/Site/: Blog.hs  Book.hs  Html.hs  Json.hs  Layout.hs  Note.hs  Pandoc.hs  Sitemap.hs  Translate.hs
docs/: CNAME  archive.html  cv.html  index.html  projects.html  robots.txt  sitemap.xml
docs/courses/: index.html
docs/css/: default.css  style.css
docs/micro-macro/: bootstrap-57c0c0f2531aa43d.js  index.html  micro-macro-8090fe7618f00975.js  micro-macro-8090fe7618f00975_bg.wasm
docs/padre-levedo/: 2001-10-21-inacio.html  2001-10-21-o-habito-traca-uma-linha-precisa-descendente-partindo-da-avenida-pauli.html  2001-10-23-belo-dia-em-sanpablo-as-coisas-estavam-tao-nitidas-que-nem-pareciam-re.html  2001-10-26-iniciada-na-igreja-de-st-buchardi-na-alemanha-a-execucao-de-uma-peca-d.html  2001-10-30-tropas-de-elite.html  2001-11-01-grande-bukowski.html  2001-11-15-catequese.html  2001-11-16-popular.html  2001-11-19-o-nome-da-rosa.html  2001-11-21-beethoven.html  2001-12-04-pudicicia.html  2001-12-10-democracia.html  2001-12-18-pobremas-da-grobalizassao-2.html  2001-12-20-eu-odeio-computadores.html  2001-12-20-pobremas-da-grobalizassao.html  2001-12-22-jingombeu.html  2002-01-04-quanto-mede-uma-trepada.html  2002-01-07-jovino.html  2002-01-17-com-a-palavra-as-damas.html  2002-01-30-politicamente-incorretissimo.html  2002-02-02-biodiversidade.html  2002-02-07-camoes-tupinik.html  2002-02-18-enron.html  2002-02-27-coletivo.html  2002-03-23-padre-levedo-de-ferias.html  2002-03-26-da-serie-micro-ensaios-paixao.html  2002-03-30-canicula.html  2002-04-02-aurelio-se-revolve-no-tumulo.html  2002-04-04-william-blake.html  2002-04-05-o-direito-de-ir-e-vir.html  2002-04-10-pedro-e-o-lobo.html  2002-04-11-da-serie-ensaios-zodiacais-mulheres-nativas-do-signo-de-touro.html  2002-04-13-fernando-pessoa-1888-1935.html  2002-04-14-ha-titulos-tao-bons-que-nao-deveriam-ter-livro-e-ha-plagios-tao-bem-fe.html  2002-04-19-speak-tupinik.html  2002-04-20-para-nao-haver-confusao.html  2002-04-20-propaganda.html  2002-04-20-temos-blog-de-graca-mas-a-que-preco.html  2002-04-24-preguica.html  2002-04-30-preguica-parte-ii.html  (+148 more)
docs/posts/: index.html  (+12 more)
nix/: default.nix  nixpkgs.nix  overlay.nix
scripts/: import-padre-levedo.py
site/: cv.html  cv.md  index.html  index.md  projects.html  projects.md
src/: cv.md  index.html  projects.md  references.md  resume.json
(+574 files in other folders)
