name:
  www
version:
  0.1.0.0
build-type:
  Simple
cabal-version:
  >= 1.10
license:
  GPL-3

executable www
  main-is:
    www.hs

  build-depends:
    base,
    aeson,
    data-default,
    directory,
    filepath,
    hakyll,
    pandoc,
    containers,
    network-uri

  default-language:
    Haskell2010
