cabal-version: 3.4
name:          builder
version:       0.1.0.0
license:       BSD-3-Clause
license-file:  LICENSE
author:        Juan Raphael Diaz Simões
maintainer:    juanrapha@gmail.com
build-type:    Simple

common warnings
  ghc-options: -Wall

executable builder
  import:           warnings
  main-is:          Main.hs
  other-modules:
    Site.Blog
    Site.Book
    Site.Html
    Site.Json
    Site.Pandoc

  build-depends:
    , aeson
    , base
    , blaze-html
    , blaze-markup
    , containers
    , lens
    , lens-aeson
    , pandoc
    , shake
    , slick
    , text
    , time
    , unordered-containers

  hs-source-dirs:   app
  default-language: GHC2021
