cabal-version: 3.4
name:          builder
version:       0.1.0.0
license:       BSD-3-Clause
license-file:  LICENSE
author:        Juan Raphael Diaz Simões
maintainer:    juanrapha@gmail.com
build-type:    Simple

common warnings
  ghc-options: -Wall

executable builder
  import:           warnings
  main-is:          Main.hs
  other-modules:
    Site.Blog
    Site.Book
    Site.Html
    Site.Json
    Site.Layout
    Site.Pandoc
    Site.Note
    Site.Sitemap
    Site.Translate

  build-depends:
    , aeson
    , base
    , blaze-html
    , blaze-markup
    , bytestring
    , containers
    , hashable
    , http-client
    , http-client-tls
    , lens
    , lens-aeson
    , directory
    , pandoc
    , pandoc-crossref
    , shake
    , slick
    , text
    , time
    , unordered-containers
    , pandoc-types

  hs-source-dirs:   app
  default-language: GHC2021
